# local-level-data-guide

./: .gitignore  .nojekyll  01-boundary-problem.html  02-the-data.html  03-method.html  04-worked-example.html  05-results.html  06-limitations.html  07-apply-it.html  08-code.html  09-code-r.html  README.md  index.html  parcel-approach.html  pyproject.toml  references.html  search.json  the-gap.html
data/: civic_broadband.csv  civic_broadband_r.csv  civic_combined.geojson  civic_combined_r.geojson  civic_income.csv  civic_income_comparison.geojson  civic_income_comparison_r.geojson  civic_income_parcels.csv  civic_income_parcels_r.csv  civic_income_r.csv  ookla_tiles_arlington.geojson  va013_acs_income_counts.geojson  va013_block_groups.geojson
guide/: 01-boundary-problem.qmd  02-the-data.qmd  03-method.qmd  04-worked-example.qmd  05-results.qmd  06-limitations.qmd  07-apply-it.qmd  08-code.qmd  09-code-r.qmd  Creating-Local-Level-Geographic-Datasets.tex  _quarto.yml  copy_figures.py  head-fonts.html  in-header.tex  index.qmd  parcel-approach.qmd  references.bib  sidebar-logo.html  the-gap.qmd  theme.scss
pipeline/: __init__.py  _fetch_fonts.py  acquire_acs.py  acquire_geographies.py  acquire_ookla.py  acquire_parcels.py  build_figures.py  combine.py  compare_methods.py  config.py  diagrams.py  figures.py  maps.py  prep.py  redistribute_broadband.py  redistribute_income.py  (+4 more)
pipeline-r/: acquire-recipe.R  combine.R  compare_methods.R  compare_to_python.R  config.R  redistribute_broadband.R  redistribute_income.R  redistribute_income_parcels.R  run.R  validate.R
(+39 files in other folders)
